# RazeCLI

./: .gitignore  README.md  pyproject.toml  razecli.spec
.github/workflows/: release-manual.yml
docs/: ble_reverse_engineering_plan.md
razecli/: __init__.py  __main__.py  ble_probe.py  cli.py  cli_battery.py  cli_ble.py  cli_button_mapping.py  cli_common.py  cli_devices.py  cli_dpi.py  cli_dpi_stages.py  cli_poll_rate.py  cli_rgb.py  device_service.py  dpi_autosync.py  dpi_stage_presets.py  errors.py  feature_scaffolds.py  model_registry.py  transport_sync.py  tui.py  tui_actions.py  tui_controller.py  tui_types.py  tui_view.py  types.py
razecli/backends/: __init__.py  base.py  hidapi_backend.py  macos_ble_backend.py  macos_profiler_backend.py  rawhid_backend.py
razecli/ble/: __init__.py  alias.py  alias_store.py  bank_signature.py  bank_snapshot_store.py  common.py  constants.py  discovery.py  sync_runner.py  transport.py
razecli/models/: __init__.py  base.py  basilisk_ultimate.py  (+29 more)
scripts/: build_macos_onedir.sh  build_macos_onefile.sh  build_windows_onedir.ps1  build_windows_onefile.ps1  generate_homebrew_formula.py  install_latest_release_binary.sh  update_readme_release_tag.py
tests/: test_bank_signature.py  test_ble_probe.py  test_cli_json_contracts.py  test_cli_parser.py  test_device_selection.py  test_device_service.py  test_dpi_stage_presets.py  test_feature_scaffolds.py  test_macos_ble_backend.py  test_macos_profiler_backend.py  test_model_registry.py  test_rawhid_backend.py  test_transport_sync.py  test_tui_actions.py  test_tui_controller.py
